--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CV de Gino Crespin, développeur web & web mobile. Compétences HTML, CSS, JavaScript, PHP, avec formation DWWM.">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="./assets/style.css">
     <title>CV_HTML_CSS</title>
