Dernières modifications avant de rendre le devoir.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                     <h1>CRESPIN Gino</h1>
                     <h3>Développeur Web et Web Mobile</h3><br>
 
-                    <address>
-                        <ul>
-                            
-                        <i>📧</i><a href="mailto:giDELAVEGA@gmail.com" target="_blank">giDELAVEGA@gmail.com</a>
-                        <i>🏠</i><a href="https://maps.app.goo.gl/MXiFSWf5Qn7oWbXP6" target="_blank">Adresse</a><br>
-                        <i>📞</i><a href="tel: 0787241353">Téléphone</a>
-                        <i class="permis">🚗 Permis B</i>
-                    </ul>
-                    </address>
+
+                        <address class="contact-info">
+                            <div class="gauche">
+                              <p>📧 <a href="mailto:giDELAVEGA@gmail.com">Mail</a></p>
+                              <p>📞 <a href="tel:0787241353">Téléphone</a></p>
+                            </div>
+                            <div>
+                              <p>🏠 <a href="https://maps.app.goo.gl/MXiFSWf5Qn7oWbXP6">Adresse</a></p>
+                              <p>🚗 Permis B</p>
+                            </div>
+                          </address>
                 </div>
             </div>
         </header>
