Ajout du responsive pour mobile. Finalisation du projet.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
             <div class=" header">
 
-
-                <img src="./assets/img/photo_id_1.png" alt="photo_id" id="photo_id">
+                <a href="./assets/img/photo_id_1.png" target="_blank">
+                    <img class="photo_profil" src="./assets/img/photo_id_1.png" alt="photo_profil" />
+                  </a>
+                <!-- <img src="./assets/img/photo_id_1.png" alt="photo_id" id="photo_id" target="_blank"> -->
 
                 <div class="txt_header">
                     <h1>CRESPIN Gino</h1>
