--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="CV de Gino Crespin, développeur web & web mobile. Compétences HTML, CSS, JavaScript, PHP, avec formation DWWM.">
+    <meta name="description"
+        content="CV de Gino Crespin, développeur web & web mobile. Compétences HTML, CSS, JavaScript, PHP, avec formation DWWM.">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="./assets/style.css">
     <title>CV_HTML_CSS</title>
@@ -19,31 +20,30 @@
 
                 <a href="./assets/img/photo_id_1.png" target="_blank">
                     <img class="photo_profil" src="./assets/img/photo_id_1.png" alt="photo_profil" />
-                  </a>
-                <!-- <img src="./assets/img/photo_id_1.png" alt="photo_id" id="photo_id" target="_blank"> -->
+                </a>
 
                 <div class="txt_header">
                     <h1>CRESPIN Gino</h1>
                     <h3>Développeur Web et Web Mobile</h3><br>
 
 
-                        <address class="contact-info">
-                            <div class="gauche">
-                              <p>📧 <a href="mailto:giDELAVEGA@gmail.com">Mail</a></p>
-                              <p>📞 <a href="tel:0787241353">Téléphone</a></p>
-                            </div>
-                            <div>
-                              <p>🏠 <a href="https://maps.app.goo.gl/MXiFSWf5Qn7oWbXP6">Adresse</a></p>
-                              <p>🚗 Permis B</p>
-                            </div>
-                          </address>
+                    <address class="contact-info">
+                        <div class="gauche">
+                            <p>📧 <a href="mailto:giDELAVEGA@gmail.com">Mail</a></p>
+                            <p>📞 <a href="tel:0787241353">Téléphone</a></p>
+                        </div>
+                        <div>
+                            <p>🏠 <a href="https://maps.app.goo.gl/MXiFSWf5Qn7oWbXP6">Adresse</a></p>
+                            <p>🚗 Permis B-C-CE-A2</p>
+                        </div>
+                    </address>
                 </div>
             </div>
         </header>
 
         <main>
             <div class="sidebar">
-                <div class="competences">
+                <div>
                     <h2>Compétences</h2>
                     <hr>
 
@@ -128,34 +128,44 @@
                 <div class="section">
                     <h2>Formations</h2>
                     <hr>
-
-                    <strong class="bold">Titre Professionnel DWWM</strong><span class="date">2024/2025</span><br>
-                    <em>Centre Européen de Formation</em>
-                    <br><br>
-
-                    <strong class="bold">Titre Professionnel Chauffeur Poids Lourd</strong><span class="date">Décembre
-                        2021</span><br>
-                        <em>Promotrans</em>
-                    <br><br>
-                    
-                        <strong class="bold">BEP Technique de l'Architecture et de l'Habitat</strong><span
-                            class="date">2006 - 2008</span><br>
-                            <em>Lycée Le Garros - AUCH</em>
+                    <div class="competences">
+                        <strong class="bold">Titre Professionnel DWWM</strong><span class="date">2024/2025</span><br>
+                        <em>Centre Européen de Formation</em>
+                    </div>
                     <br>
+
+                    <div class="competences">
+                        <strong class="bold">Titre Professionnel Chauffeur Poids Lourd</strong><span
+                            class="date">Décembre
+                            2021</span><br>
+                        <em>Promotrans</em>
+                    </div>
+                    <br>
+
+                    <div class="competences">
+                        <strong class="bold">BEP Technique de l'Architecture et de l'Habitat</strong><span
+                            class="date">2006
+                            - 2008</span><br>
+                        <em>Lycée Le Garros - AUCH</em>
+                    </div>
                 </div>
 
                 <div class="section">
                     <h2>Stages</h2>
                     <hr>
 
-                    <strong class="bold">Gestionnaire de paye</strong><span class="date">Mars 2022 - Avril
-                        2022</span><br>
+                    <div class="competences">
+                        <strong class="bold">Gestionnaire de paye</strong><span class="date">Mars 2022 - Avril
+                            2022</span><br>
                         <em>Société Truc & Associé</em>
-                    <br><br>
+                    </div>
+                    <br>
 
-                    <strong class="bold">Agent d'accueil</strong><span class="date">Janvier 2021 - Février
-                        2021</span><br>
+                    <div class="competences">
+                        <strong class="bold">Agent d'accueil</strong><span class="date">Janvier 2021 - Février
+                            2021</span><br>
                         <em>Maison de la Ville</em>
+                    </div>
 
                 </div>
 
@@ -163,18 +173,26 @@
                     <h2>Expérience professionnelle</h2>
                     <hr>
 
-                    <strong class="bold">Agent d'accueil</strong><span class="date">Mars 2021 - Juillet 2021</span><br>
-                    <em>Maison de la Ville</em>
-                    <br><br>
+                    <div class="competences">
+                        <strong class="bold">Agent d'accueil</strong><span class="date">Mars 2021 - Juillet
+                            2021</span><br>
+                        <em>Maison de la Ville</em>
+                    </div>
+                    <br>
 
-                    <strong class="bold">Chauffeur - Livreur</strong><span class="date">Septembre 2021 - Décembre
-                        2021</span><br>
+                    <div class="competences">
+                        <strong class="bold">Chauffeur - Livreur</strong><span class="date">Septembre 2021 - Décembre
+                            2021</span><br>
                         <em>Transports Malin & Fils</em>
-                    <br><br>
+                    </div>
+                    <br>
 
-                    <strong class="bold">Préparateur de commandes</strong><span class="date">Janvier 2000 - Septembre
-                        2000</span><br>
+                    <div class="competences">
+                        <strong class="bold">Préparateur de commandes</strong><span class="date">Janvier 2000 -
+                            Septembre
+                            2000</span><br>
                         <em>Le Slip Français</em>
+                    </div>
                     <br>
                 </div>
             </div>
@@ -185,15 +203,15 @@
                 <ul class="reseaux">
                     <a href="https://www.linkedin.com" target="_blank">
                         <img class="logo" src="./assets/img/linkedin1.png" alt="LinkedIn" />
-                      </a>
-                      <a href="https://www.github.com" target="_blank">
+                    </a>
+                    <a href="https://www.github.com" target="_blank">
                         <img class="logo" src="./assets/img/git1.png" alt="GitHub" />
-                      </a>
-                      <a href="https://www.instagram.com" target="_blank">
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
                         <img class="logo" src="./assets/img/insta1.png" alt="Instagram" />
-                      </a>
+                    </a>
                 </ul>
-                <p class="maj">Mis à jour le : 10/04/2025</p>
+                <p class="maj">Mis à jour le : 21/04/2025</p>
             </div>
 
         </footer>
