Le projet est terminé !

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <header>
 
             <div class=" header">
-
                 <a href="./assets/img/photo_id_1.png" target="_blank">
-                    <img class="photo_profil" src="./assets/img/photo_id_1.png" alt="photo_profil" />
+                    <img class="photo_profil" src="./assets/img/photo_id_1.png" alt="photo_profil">
                 </a>
 
                 <div class="txt_header">
@@ -200,17 +199,17 @@
 
         <footer>
             <div class="footer">
-                <ul class="reseaux">
+                <div class="reseaux">
                     <a href="https://www.linkedin.com" target="_blank">
-                        <img class="logo" src="./assets/img/linkedin1.png" alt="LinkedIn" />
+                        <img class="logo" src="./assets/img/linkedin1.png" alt="LinkedIn" >
                     </a>
                     <a href="https://www.github.com" target="_blank">
-                        <img class="logo" src="./assets/img/git1.png" alt="GitHub" />
+                        <img class="logo" src="./assets/img/git1.png" alt="GitHub" >
                     </a>
                     <a href="https://www.instagram.com" target="_blank">
-                        <img class="logo" src="./assets/img/insta1.png" alt="Instagram" />
+                        <img class="logo" src="./assets/img/insta1.png" alt="Instagram" >
                     </a>
-                </ul>
+                </div>
                 <p class="maj">Mis à jour le : 21/04/2025</p>
             </div>
 
